[Src] Fix a modal z-index issue

--- a/src/_exprecss.sass
+++ b/src/_exprecss.sass
@@ -1,4 +1,4 @@
-$version: 'v0.3.9'
+$version: 'v0.4.0'
 $year: '2015'
 $license: 'MIT'
 
